# Stel-masked

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
backend/: go.mod
backend/cmd/noded/: main.go
backend/internal/session/: session.go
backend/internal/stellar/: client.go
backend/internal/wireguard/: peer.go
client/: go.mod
client/cmd/stelvpn/: main.go
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs  test.rs
contracts/payment/test_snapshots/test/: cannot_settle_after_close.1.json  close_refunds_unused.1.json  opens_session_and_locks_deposit.1.json  rejects_duplicate_session.1.json  rejects_zero_deposit.1.json  settle_rejects_overdraft.1.json  settle_transfers_to_node.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: deregisters_and_returns_stake.1.json  double_initialize_fails.1.json  registers_node_when_stake_sufficient.1.json  rejects_duplicate_registration.1.json  rejects_empty_endpoint.1.json  rejects_insufficient_stake.1.json
deployments/: testnet.json
docs/: APPLICATION.md  DESIGN.md  WAVE_ISSUES.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: deploy_testnet.sh
