[workspace]
resolver = "2"
members = [
    "contracts/registry",
    "contracts/payment",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/REPLACE_ME/stellarvpn"

[workspace.dependencies]
soroban-sdk = "21.7.6"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
